# stone

./: .gitignore  Dockerfile  README.md  inference.py  main.py  pyproject.toml  training_loop.py
ckpt/: semisupervised_ks_mode.pt  semitone_ks.pt
config/: ks.gin  ks_mode.gin
src/: hcqt.py
src/stone12/: stone.py  stone_loss.py
src/stone12/dataloader/: __init__.py
src/stone12/model/: chromanet.py  convnext.py
src/stone24/: stone.py  stone_loss.py
src/stone24/dataloader/: __init__.py
src/stone24/model/: chromanet.py  convnext.py
src/utils/: callbacks.py  gin.py  scheduler.py  training.py
