[tool.poetry]
name = "stone"
version = "0.1.0"
description = ""
authors = ["Yuexuan Kong <ykong@deezer.com>, Vincent Lostanlen, Gabriel Meseguer-Brocal, Stella Wong, Mathieu Lagrange, Romain Hennequin"]
packages = [
    { include = "stone" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
torch = "2.0.0"
torchaudio = "2.0.1"
torchvision = "0.15.1"
tensorflow = "2.12.*"

[tool.poetry.group.dev.dependencies]
tqdm = "4.65.*"
torchinfo = "1.7.*"
matplotlib = "3.7.*"
gin-config = "0.5.*"
GPUtil = "1.4.*"
tensorflow-io = "0.32.*"
einops = "0.6.*"
scipy = "1.10.*"
pandas = "1.5.*"
openpyxl = "3.1.*"
ipython = "8.12.*"
ujson = "5.7.*"
timm = "0.6.*"
hvac = "1.1.*"
pymysql = "1.0.*"
dbutils = "3.0.*"
audioread = "3.0.*"
torchmetrics = "0.11.*"
weightwatcher = "0.7.*"
Unidecode = "1.3.*"
mypy = "*"
black = "*"
isort = "*"
pytest-cov = "*"
pytest-mock = "*"
pytest-asyncio = "*"
pytest = "*"
flake8 = "*"
nnAudio = "0.3.2"
pdbr = "*"

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov-report xml:coverage.xml --cov=. --junitxml=xunit.xml"
junit_family = "xunit2"
